# aracor-ai-assignment-zekeri-riya

./: .env.example  .gitignore  README.md  pyproject.toml  setup.cfg
src/: __init__.py
src/api/: config.py  endpoints.py
src/config/: __init__.py  settings.py
src/models/: __init__.py  schemas.py
src/processors/: __init__.py  document.py
src/services/: model_manager.py  summary.py
src/utils/: __init__.py  logging.py
tests/: conftest.py  test_document_processor.py  test_integration.py  test_logging.py  test_model_manager.py  test_schemas.py  test_summary_generator.py
